item.cc:   Fixed bug #13410.   Fixed name resolution for qualified reference to a view column   in the HAVING clause. view.result, view.test:   Added a test case for bug #13410.